# rust_web_server

./: Cargo.toml
src/: main.rs
src/handlers/: get_data.rs  mod.rs  post_data.rs
src/models/: get_data.rs  mod.rs  post_data.rs
src/services/: kafka_to_mongo.rs  mod.rs
