[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.27", features = ["cmake-build"] }
mongodb = { version = "2.0", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
futures = "0.3"